# ecr_maintainer

./: .gitignore  .keep  .pre-commit-config.yaml  README.md  lambda_function.py  pyproject.toml  run_cleaner.py
.devcontainer/: devcontainer.json  on-create.sh
ecr_cleaner/: __init__.py  config.py  helper.py  lamda.py  main.py  requirements-dev.txt  requirements.txt
ecr_cleaner/cleaner/: __init__.py
ecr_cleaner/manager/: __init__.py  ecr_manager.py  ecs_manager.py
ecr_cleaner/notifier/: __init__.py  slack_notifier.py
ecr_cleaner/test/: conftest.py  ecr_cleaner_test.py  ecr_manager_test.py  ecs_manager_test.py  slack_notifier_test.py
ecr_cleaner/test/fixtures/: test_data.py
